--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.14",
     "gsap": "^3.13.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "19.2",
+    "react-dom": "19.2",
     "tailwindcss": "^4.1.14",
     "three": "^0.180.0"
   },
